# qatlib-freebsd

./: .gitignore  INSTALL  LICENSE  Makefile.am  README.md  Samples.am  autogen.sh  configure.ac  filelist  versionfile
quickassist/include/: cpa.h  cpa_dev.h  cpa_types.h
quickassist/include/dc/: cpa_dc.h  cpa_dc_bp.h  cpa_dc_chain.h  cpa_dc_dp.h
quickassist/include/lac/: cpa_cy_common.h  cpa_cy_dh.h  cpa_cy_drbg.h  cpa_cy_dsa.h  cpa_cy_ec.h  cpa_cy_ecdh.h  cpa_cy_ecdsa.h  cpa_cy_ecsm2.h  cpa_cy_im.h  cpa_cy_key.h  cpa_cy_kpt.h  cpa_cy_ln.h  cpa_cy_nrbg.h  cpa_cy_prime.h  cpa_cy_rand.h  cpa_cy_rsa.h  cpa_cy_sym.h  cpa_cy_sym_dp.h
quickassist/lookaside/access_layer/include/: icp_buffer_desc.h  icp_sal.h  icp_sal_iommu.h  icp_sal_nrbg_ht.h  icp_sal_poll.h  icp_sal_user.h  icp_sal_versions.h
quickassist/lookaside/access_layer/src/common/compression/: dc_buffers.c  dc_chain.c  dc_crc32.c  dc_crc64.c  dc_datapath.c  dc_dp.c  dc_err_sim.c  dc_header_footer.c  dc_ns_datapath.c  dc_ns_header_footer.c  dc_session.c  dc_stats.c  icp_sal_dc_err_sim.c
quickassist/lookaside/access_layer/src/common/compression/include/: dc_crc32.h  dc_crc64.h  dc_datapath.h  dc_err_sim.h  dc_error_counter.h  dc_header_footer.h  dc_session.h  dc_stats.h
quickassist/lookaside/access_layer/src/common/crypto/sym/: lac_sym_alg_chain.c  lac_sym_api.c  lac_sym_auth_enc.c  lac_sym_cb.c  lac_sym_cipher.c  lac_sym_compile_check.c  lac_sym_dp.c  lac_sym_hash.c  lac_sym_hash_sw_precomputes.c  lac_sym_partial.c  lac_sym_queue.c  lac_sym_stats.c
quickassist/lookaside/access_layer/src/common/ctrl/: sal_compression.c  sal_create_services.c  sal_crypto.c  sal_ctrl_services.c  sal_get_instances.c  sal_list.c
quickassist/lookaside/access_layer/src/common/include/: lac_buffer_desc.h  lac_common.h  lac_hooks.h  lac_list.h  lac_log.h  lac_logger_utils.h  lac_mem.h  lac_mem_pools.h  lac_module.h  lac_sal.h  lac_sal_ctrl.h  lac_sal_types.h  lac_sal_types_crypto.h  lac_sync.h  lac_version.h  sal_hw_gen.h  sal_qat_cmn_msg.h  sal_service_state.h  sal_statistics.h  sal_string_parse.h  sal_types_compression.h  sal_types_patternmatch.h
quickassist/lookaside/access_layer/src/common/qat_comms/: sal_qat_cmn_msg.c
quickassist/lookaside/access_layer/src/common/utils/: lac_buffer_desc.c  lac_lock_free_stack.h  lac_log_message.c  lac_mem.c  lac_mem_pools.c  lac_sync.c  sal_service_state.c  sal_statistics.c  sal_string_parse.c  sal_user_process.c  sal_versions.c
quickassist/lookaside/access_layer/src/device/: dev_info.c
quickassist/lookaside/access_layer/src/qat_direct/include/: adf_kernel_types.h  adf_user.h  icp_accel_devices.h  icp_adf_accel_mgr.h  icp_adf_cfg.h  icp_adf_dbg_log.h  icp_adf_debug.h  icp_adf_esram.h  icp_adf_init.h  icp_adf_poll.h  icp_adf_transport.h  icp_adf_transport_dp.h  icp_adf_user_proxy.h  icp_platform.h  icp_platform_user.h
quickassist/lookaside/access_layer/src/qat_direct/src/: adf_dev_ring_ctl.h  adf_process_proxy.c  adf_user_ETring_mgr_dp.c  adf_user_init.c  adf_user_transport_ctrl.c  uio_user.h  uio_user_arbiter.h  uio_user_bundles.c  uio_user_bundles.h  uio_user_cfg.c  uio_user_cfg.h  uio_user_debug.c  uio_user_device.c  uio_user_dyn.c  uio_user_ring.c  uio_user_ring.h  uio_user_shared_mutex.c  uio_user_shared_mutex.h  uio_user_utils.h
quickassist/lookaside/access_layer/src/sample_code/: README.txt
quickassist/lookaside/access_layer/src/sample_code/busy_loop/: busy_loop.c  busy_loop.h
quickassist/lookaside/access_layer/src/sample_code/functional/common/: cpa_sample_utils.c
quickassist/lookaside/access_layer/src/sample_code/functional/include/: cpa_sample_cnv_utils.h  cpa_sample_utils.h
quickassist/lookaside/access_layer/src/sample_code/performance/: cpa_sample_code_main.c
quickassist/lookaside/access_layer/src/sample_code/performance/common/: qat_perf_buffer_utils.c  qat_perf_buffer_utils.h  qat_perf_cycles.h  qat_perf_latency.c  qat_perf_latency.h  qat_perf_sleeptime.c  qat_perf_sleeptime.h  qat_perf_utils.c  qat_perf_utils.h
quickassist/lookaside/access_layer/src/sample_code/performance/compression/: calgary  canterbury  cpa_sample_code_dc_dp.c  cpa_sample_code_dc_dp.h  cpa_sample_code_dc_perf.h  cpa_sample_code_dc_utils.c  cpa_sample_code_dc_utils.h  cpa_sample_code_zlib.c  qat_compression_cnv_utils.h  qat_compression_e2e.c  qat_compression_e2e.h  qat_compression_main.c  qat_compression_main.h  qat_compression_utils.c  qat_compression_zlib.h
quickassist/lookaside/access_layer/src/sample_code/performance/crypto/: cpa_sample_code_crypto_utils.c  cpa_sample_code_crypto_utils.h  cpa_sample_code_dh_perf.c  cpa_sample_code_dsa_perf.c  cpa_sample_code_ec_curves.h  cpa_sample_code_ecdsa_perf.c  cpa_sample_code_ike_rsa_perf.c  cpa_sample_code_rsa_perf.c  cpa_sample_code_sym_perf.c  cpa_sample_code_sym_perf_dp.c  cpa_sample_code_sym_perf_dp.h  cpa_sample_code_sym_update.c  cpa_sample_code_sym_update_common.c  cpa_sample_code_sym_update_common.h  cpa_sample_code_sym_update_dp.c  qat_sym_main.c  (+2 more)
quickassist/lookaside/access_layer/src/user/: sal_user.c  sal_user_dyn_instance.c
quickassist/lookaside/firmware/include/: icp_qat_fw.h  icp_qat_fw_comp.h  icp_qat_fw_la.h  icp_qat_fw_mmp.h  icp_qat_fw_mmp_ids.h  icp_qat_fw_pke.h  icp_qat_hw.h  icp_qat_hw_20_comp.h  icp_qat_hw_20_comp_defs.h
quickassist/utilities/libusdm_drv/: qae_mem.h
quickassist/utilities/libusdm_drv/freebsd/kernel_space/: Makefile  qae_mem_drv.c  qae_mem_drv_utils.c  qae_mem_utils.c
quickassist/utilities/libusdm_drv/include/: qae_mem_utils.h
quickassist/utilities/libusdm_drv/user_space/: qae_mem_hugepage_utils.h  qae_mem_user_utils.h  qae_mem_utils_common.c  qae_mem_utils_common.h  qae_page_table_common.h  qae_page_table_defs.h
quickassist/utilities/libusdm_drv/user_space/uio/: qae_mem_hugepage_utils_uio.c  qae_mem_utils_uio.c  qae_page_table_uio.h
quickassist/utilities/osal/include/: Osal.h  OsalDevDrvCommon.h  OsalTypes.h
quickassist/utilities/osal/src/freebsd/user_space/: OsalAtomic.c  OsalCryptoInterface.c  OsalIOMMUMgmt.c  OsalMutex.c  OsalSemaphore.c  OsalServices.c  OsalSpinLock.c  OsalThread.c
(+126 files in other folders)
